tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__key_recovery_test__key_recovery_validating.snap
---
source: tests/snapshot_tests/screens/key_recovery_test.rs
expression: backend
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                 🔐 OpenKeyring                                 " Hidden by multi-width symbols: [(34, " ")]
"                          ─────────────────────────────                         "
"                                Recover Vault Key                               "
"                                                                                "
"          Enter your recovery words to rebuild wrapped_secret_key.json.         "
"                                                                                "
"    ┌──────────────────────────────────────────────────────────────────────┐    "
"    │01. ____          02. ____          03. ____          04. ____        │    "
"    │05. ____          06. ____          07. ____          08. ____        │    "
"    │09. ____          10. ____          11. ____          12. ____        │    "
"    │13. ____          14. ____          15. ____          16. ____        │    "
"    │17. ____          18. ____          19. ____          20. ____        │    "
"    │21. ____          22. ____          23. ____          24. ____        │    "
"    └──────────────────────────────────────────────────────────────────────┘    "
"                             [ Reset ]  [ Confirm ]                             "
"                         ⟳ Validating recovery words...                         "
"                                 Please wait...                                 "
"                                    Step 1/2                                    "
"                                                                                "
"                                                                                "
"                                                                                "
